# Flip-Track

./: README.md
FlipTrack/: app.py  models.py  pyproject.toml  utils.py
FlipTrack/routes/: __init__.py  auth.py  items.py  onboarding.py
FlipTrack/scrapers/: hibid.py
FlipTrack/static/css/: styles.css
FlipTrack/static/js/: gallery.js  theme.js  viewer.js
FlipTrack/templates/: analytics.html  assets.html  base.html  dashboard.html
FlipTrack/templates/auth/: account.html  forgot_password.html  login.html  reset_password.html
FlipTrack/templates/items/: detail.html  edit.html  list.html  new.html
FlipTrack/templates/onboarding/: step1.html  step2.html  step3.html
FlipTrack/templates/settings/: appearance.html  backend.html  main.html  users.html
FlipTrack/templates/supplies/: list.html
FlipTrack/templates/watchlist/: add_catalog_manual.html  add_lot_manual.html  catalog_detail.html  catalogs.html  edit_catalog.html  lot_detail.html
